packages/cashc/test/compiler/ParseError/function_without_args.cash
contract Test(int x, string y) {
    return {
        hello {
        },

        world(int a) {
        }
    }
}
